# MiLoMerge

./: .gitignore  README.md  debug.txt  process_analytic.py  pyproject.toml  requirements.txt  test_ROC.py  test_placement.py  tester.py
.github/workflows/: build.yml  pylint.yml  test.yml
brunelle_merger/: README.md  SUPER_ROC_Curves.py  brunelle_merger.py  histogram_helpers.py  jit_methods.py  pyproject.toml
docs/source/: Changelog.rst  FAQ.rst  MiLoMerge.rst  Placement.rst  conf.py  index.rst
optimized_binning/: ROC_curves.py  bin_optimizer.py  bin_splitter.cpp  bin_splitter.hpp  bin_splitter.py
optimized_binning/merging/: bin_optimizer.py  place_from_map.py  testing.ipynb
optimized_binning/metrics/: ROC_curves.py
optimized_binning/testing/: test_nonlocal.py
src/MiLoMerge/: __init__.py
src/MiLoMerge/merging/: bin_optimizer.py  place_from_map.py
src/MiLoMerge/metrics/: ROC_curves.py
test_data/: out_g1.txt  out_g1.txt.mm  out_g1g4.txt  out_g1g4.txt.mm  out_g4.txt  out_g4.txt.mm
tests/: test_merge_local.py  test_merge_nonlocal.py  test_metadata.py  test_nonlocal.py
tests/analytic_tests/: Analytic.py  Analytic_pairwise_INT.py  process_analytic.py  test_placement.py  tester.py
tests/analytic_tests/7_bin_test/: out_g1_0_g4ZZ_1.txt  out_g1_1.txt  out_g1_1_g1_0_g4ZZ_1_int.txt  process_analytic.py  tester.py
tests/four_lepton_tests/: Z1Mass.mm  Z1Mass.py  Z2Mass.mm  Z2Mass.py  helcosthetaZ1.mm  helcosthetaZ1.py  helcosthetaZ2.mm  helcosthetaZ2.py  helphi.mm  helphi.py  test_placement.py  tester.py
