[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "MiLoMerge"
version = "1.0.0"
authors = [
  { name="MiLoMerge authors", email="msrivas6@jhu.edu"},
]
maintainers = [
  { name="MiLoMerge authors", email="msrivas6@jhu.edu"},
]
description = "A package to take a given distribution and retrieve the best binning to maximize separation"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "h5py>=3.0.0",
  "numba>=0.63.1",
  "numpy>=2.0.0",
  "tqdm",
]

[project.urls]
"Github" = "https://github.com/MohitS704/bin_merging"
Homepage = "https://spin.pha.jhu.edu/"
Discussions = "https://github.com/MohitS704/bin_merging/discussions"
Changelog = "https://github.com/MohitS704/bin_merging/releases"

[dependency-groups]
docs = [
  "furo",
  "myst_parser >=0.13",
  "sphinx >=4.0",
  "sphinx-copybutton",
  "sphinx-autodoc-typehints",
]
