[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "MiLoMerge"
version = "1.0.1"
authors = [
  { name="MiLoMerge authors", email=""},
]
maintainers = [
  { name="Mohit Srivastav", email="msrivas6@jh.edu"},
]
description = "A package to take a given histogram and merge bins such that the seperability loss is minimized."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "h5py>=3.0.0",
  "numba",
  "numpy>=2.0.0",
  "tqdm",
]

classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Utilities",
]

[project.urls]
"Github" = "https://github.com/JHUGen/MiLoMerge"
"Homepage" = "https://spin.pha.jhu.edu/"
"Documentation" = "https://spin.pha.jhu.edu/MiLoMerge"
"Changelog" = "https://spin.pha.jhu.edu/MiLoMerge/Changelog.html"

[dependency-groups]
docs = [
  "furo",
  "myst_parser >=0.13",
  "sphinx >=4.0",
  "sphinx-copybutton",
  "sphinx-autodoc-typehints",
]
