[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minimal-binning"
version = "0.0.1"
authors = [
  { name="Lucas Kang", email="" }
  { name="Michalis Panagiotou", email=""},
  { name="Mohit Srivastav", email="msrivas6@jhu.edu"}
]
maintainers = [
  { name="Lucas Kang", email="" }
  { name="Michalis Panagiotou", email=""},
  { name="Mohit Srivastav", email="msrivas6@jhu.edu"}
]
description = "A package to take a given distribution and approximate the best nonlocal binning to maximize separation"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Github" = "https://github.com/MohitS704/bin_merging"
